--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/SolidZORO/zpix-pixel-font@latest/dist/zpix.css"> -->
 </head>
-<body style="background-image: url('images/night-sky.jpg'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+<body style="background-image: url('https://raw.githubusercontent.com/ricky791/ricky/main/night-sky.jpg'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
     <header>
         <h1>调研成果时间轴</h1>
         <nav>
@@ -44,7 +44,7 @@
 
     <!-- 添加一个新的div来容纳圣经动图 -->
     <div id="bible-container" class="hidden">
-        <img src="images/bible.gif" alt="圣经动图" id="bible-image">
+        <img src="https://raw.githubusercontent.com/ricky791/ricky/main/bible.gif" alt="圣经动图" id="bible-image">
     </div>
 
     <script src="timeline.js"></script>
